force-app/main/default/objects/PS_Drawing__c/PS_Drawing__c.object-meta.xml
<CustomObject>
    <label>PS_Drawing</label>
    <nameField>
        <label>PS_Drawing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Drawing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>