force-app/main/default/objects/PS_Drawing__c/fields/DimA__c.field-meta.xml
<CustomField>
    <fullName>DimA__c</fullName>
    <label>DimA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>