force-app/main/default/objects/PS_Drawing__c/fields/DrawingID__c.field-meta.xml
<CustomField>
    <fullName>DrawingID__c</fullName>
    <label>DrawingID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>