force-app/main/default/objects/PS_Drawing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASSYPARTNO__c</columns>
    <columns>DrawingID__c</columns>
    <columns>DimA__c</columns>
    <columns>DimB__c</columns>
    <columns>DimC__c</columns>
    <columns>DimD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a5t0v000000cSsC</value>
    </filters>
    <label>All</label>
</ListView>